# wikijs-mcp

./: .mcp.json  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_client.py  test_config.py  test_graphql_compatibility.py  test_server.py
wikijs_mcp/: client.py  config.py  server.py
